<resources>
    <string name="app_name">RSN Drone</string>
    <string name="takeoff">Takeoff</string>
    <string name="land">Land</string>
    <string name="Disconnect">Disconnect</string>
    <string name="abouttext">An unmanned aerial vehicle (UAV), commonly known as a drone, is an aircraft without a human pilot aboard. UAVs are a component of an unmanned aircraft system (UAS); which include a UAV, a ground-based controller, and a system of communications between the two. The flight of UAVs may operate with various degrees of autonomy: either under remote control by a human operator or autonomously by onboard computers.</string>
    <string name="about">About</string>
    <string name="home">Home</string>
    <string name="homebtn">TODO</string>
    <string name="closedialog">closedialog</string>
    <string name="plane">plane</string>
    <string name="video">Video</string>


</resources>
